--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,7 +15,7 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
     ports:
       # Expose the PostgreSQL port to the host machine.
-      - "${POSTGRES_PORT}:5432"
+      - "${DB_PORT}:5432"
 
   # Redis Caching Service
   redis:
